extracted duplicate code: from internal to normal supplier wrapping all shouldBeWrapped attributes avoiding double-wrapping internal supplier deep-clone now works with suppliers